yml/advanced/controller/ingress/ssl/ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.https.com
      secretName: secret-https
  rules:
    - host: www.https.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-https
                port:
                  number: 8080
